--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ wasm-bindgen = "0.2"
 # allocator, so it's not enabled by default.
 wee_alloc = { version = "0.4.2", optional = true }
 
+console_error_panic_hook = "0.1"
+
 [dependencies.web-sys]
 version = "0.3"
 features = [
