Register click listener in Rust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ features = [
     "Element",
     "HtmlElement",
     "HtmlInputElement",
+    "InputEvent",
     "WebTransport",
     "Window",
 ]
