--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,12 @@ version = "0.3"
 features = [
     "console",
     "Document",
+    "DomRect",
     "Element",
     "HtmlElement",
     "HtmlInputElement",
     "InputEvent",
+    "Node",
     "WebTransport",
     "Window",
 ]
