--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ wasm-bindgen = "0.2"
 wee_alloc = { version = "0.4.2", optional = true }
 
 console_error_panic_hook = "0.1"
+wasm-bindgen-futures = "0.4.37"
 
 [dependencies.web-sys]
 version = "0.3"
