--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ wee_alloc = { version = "0.4.2", optional = true }
 
 console_error_panic_hook = "0.1"
 wasm-bindgen-futures = "0.4.37"
+js-sys = "0.3.64"
 
 [dependencies.web-sys]
 version = "0.3"
@@ -33,6 +34,9 @@ features = [
     "HtmlInputElement",
     "InputEvent",
     "Node",
+    "ReadableStream",
+    "ReadableStreamDefaultReader",
+    "TextDecoder",
     "WebTransport",
     "WebTransportDatagramDuplexStream",
     "Window",
