Read selected radio button

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,9 @@ features = [
     "Document",
     "DomRect",
     "Element",
+    "HtmlCollection",
     "HtmlElement",
+    "HtmlFormElement",
     "HtmlInputElement",
     "InputEvent",
     "Node",
