Implement send_data()

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,11 +34,13 @@ features = [
     "HtmlElement",
     "HtmlFormElement",
     "HtmlInputElement",
+    "HtmlTextAreaElement",
     "InputEvent",
     "Node",
     "ReadableStream",
     "ReadableStreamDefaultReader",
     "TextDecoder",
+    "TextEncoder",
     "WebTransport",
     "WebTransportDatagramDuplexStream",
     "WebTransportReceiveStream",
