Implement bidi in send_data()

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,10 @@ features = [
     "TextDecoder",
     "TextEncoder",
     "WebTransport",
+    "WebTransportBidirectionalStream",
     "WebTransportDatagramDuplexStream",
+    "WebTransportReceiveStream",
+    "WebTransportSendStream",
     "Window",
     "WritableStream",
     "WritableStreamDefaultWriter",
